Add Delete Member Endpoint
